force-app/main/default/objects/Course_Attendee__c/Course_Attendee__c.object-meta.xml
<CustomObject>
    <label>Course Attendee</label>
    <nameField>
        <displayFormat>ATTENDEE-{00000}</displayFormat>
        <label>Course Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>