force-app/main/default/objects/Course_Attendee__c/fields/Instructor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Notes__c</fullName>
    <label>Instructor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>