force-app/main/default/objects/Course_Attendee__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Contact who is attending the course delivery.</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Attendees</relationshipLabel>
    <relationshipName>Course_Attendees1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>