force-app/main/default/objects/Course_Attendee__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>HYPERLINK(  Student__r.Id,  TRIM(Student__r.FirstName &amp; &quot; , &quot; &amp; Student__r.LastName ), &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>